Fixed carousel size on mobile

--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -5,7 +5,7 @@
         padding-top: 60px;
         
         @include breakpoint-down(small) {
-            padding: 20px 20px 0 20px;
+            padding: 30px 20px 0 20px;
         }
     }
 
